# ShardX-Wayfern

./: LICENSE  README.md  openapi.yaml  package-lock.json  package.json
.github/workflows/: check.yml  ci.yml
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json
sdks/node/src/: autoResolve.ts  browser.ts  geo.ts  host.ts  index.ts  profile.ts  proxy.ts  randomize.ts  runtime.ts  screen.ts
sdks/python/: README.md  pyproject.toml
sdks/python/shardx/: __init__.py  auto_resolve.py  browser.py  geo.py  host.py  profile.py  proxy.py  randomize.py  runtime.py  screen.py
sdks/rust/: Cargo.toml
sdks/rust/src/: browser.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  cookies.rs  ixbrowser.rs  launch.rs  lib.rs  process.rs  profile.rs  proxy.rs  settings.rs  store.rs  sync.rs
src-tauri/src/wayfern/: cdp.rs  convert.rs  downloader.rs  mod.rs
sync-server/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json
sync-server/scripts/: install-ubuntu.sh
sync-server/src/: server.js
