[project]
name = "shardx"
version = "0.1.1"
description = "Self-contained Python SDK for the ShardX anti-detect browser — downloads the engine + Widevine + fingerprint library on first use, launches isolated profiles."
authors = [{ name = "ProxyShard", email = "support@proxyshard.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["anti-detect", "browser", "fingerprint", "chromium", "scraping", "multi-accounting", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx[socks]>=0.27",
    # patchright is a stealth-patched Playwright fork; `sdk.session()`
    # returns a patchright Browser ready to drive (no manual CDP wiring).
    "patchright>=1.49",
]

[project.urls]
Homepage      = "https://github.com/ProxyShard/ShardBrowser"
Repository    = "https://github.com/ProxyShard/ShardBrowser"
Documentation = "https://docs.proxyshard.com"
Issues        = "https://github.com/ProxyShard/ShardBrowser/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shardx"]
